version/0.39/_sources/api/solver/_autosummary/settings/profiles.rst.txt
:orphan:

.. _profiles:

profiles
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.profiles
    :show-inheritance:

.. rubric:: Attributes

====================================================================================================================   ================================================================================

Attribute                                                                                                                                                                                       Summary

====================================================================================================================   ================================================================================
:ref:`update_interval <update_interval_2>`                                                                                                                             Dynamic profile update interval.

:ref:`extrapolation_tolerance_factor <extrapolation_tolerance_factor>`                                                                                                  Extrapolation tolerance factor.

:ref:`circumferential_averaged_profile_enhanced_bands_check <circumferential_averaged_profile_enhanced_bands_check>`       Enhamced viability check for circumferential averaged profile band creation.

====================================================================================================================   ================================================================================

.. rubric:: Methods

========================================================================================   =====================================================

Method                                                                                                                                   Summary

========================================================================================   =====================================================
:ref:`display_profile_point_cloud_data <display_profile_point_cloud_data>`                             Display Profile Point cloud data Command.

:ref:`display_profile_surface <display_profile_surface>`                                        Display Profile Surface/field rendering command.

:ref:`set_preference_profile_point_cloud_data <set_preference_profile_point_cloud_data>`                       Profile Point attributes command.

:ref:`overlay_profile_point_cloud_data <overlay_profile_point_cloud_data>`                     Overlay Display Profile Point cloud data Command.

:ref:`overlay_profile_surface <overlay_profile_surface>`                                                Overlay Display Profile Surface Command.

:ref:`list_profiles <list_profiles>`                                                                                      List-profiles-command.

:ref:`list_profile_parameters <list_profile_parameters>`                                                        List-profile-parameters-command.

:ref:`list_profile_parameters_with_value <list_profile_parameters_with_value>`                       List-profile-parameters-with-value-command.

:ref:`list_profile_fields <list_profile_fields>`                                                                    List-profile-fields-command.

:ref:`delete <delete_4>`                                                                                                 Delete-profile-command.

:ref:`delete_all <delete_all_1>`                                                                                             Delete-all-command.

========================================================================================   =====================================================

.. rubric:: Included in:

====================   ==================================================================================================================================

Parent                                                                                                                                            Summary

====================   ==================================================================================================================================
:ref:`setup <setup>`       Provides access to all primary setup options including general settings, models, boundary conditions and solver configuration.

====================   ==================================================================================================================================

